# graphrag-experiments

./: .gitignore  README.md  TKG.md  architecture.md  pyproject.toml  run_webapp.sh
src/graphrag/: __init__.py  graph_rag_demo.py  web_app.py
