[project]
name = "graphrag"
version = "0.1.0"
description = "Experimental project for building and querying knowledge graphs from markdown files using LlamaIndex"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "llama-index-core==0.12.15",
    "llama-index-llms-openai==0.3.16",
    "openai==1.61.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.31.0",
    "pyvis>=0.3.2",
    "networkx>=3.2.1",
    "fsspec==2025.2.0",
    "certifi==2025.1.31",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
